Basic framework development and treeview development

--- a/obs-plugin-management/data/locale/en-US.ini
+++ b/obs-plugin-management/data/locale/en-US.ini
@@ -1,2 +1,11 @@
 opm.PluginCenter="Plugin Center"
 opm.PluginCenterWindowText="OBS Plugin Management"
+opm.installed="Installed"
+opm.online="Online"
+opm.onlinesource="Source"
+opm.onlineoutput="Output"
+opm.onlineencoder="Encoder"
+opm.onlineservice="Service"
+opm.onlinefilter="Filter"
+opm.onlinetransition="Transition"
+opm.about="About"
